--- a/space.html
+++ b/space.html
@@ -487,25 +487,25 @@
     <script>
         const planetData = {
             sun: {
-                audioFile: "audio/sun.mp3"
+                audioFile: "songs/happy 1.mp3"
             },
             mercury: {
-                audioFile: "audio/mercury.mp3"
+                audioFile: "songs/mercury.mp3"
             },
             venus: {
-                audioFile: "audio/venus.mp3"
+                audioFile: "songs/venus.mp3"
             },
             earth: {
-                audioFile: "audio/earth.mp3"
+                audioFile: "songs/earth.mp3"
             },
             mars: {
-                audioFile: "audio/mars.mp3"
+                audioFile: "songs/mars.mp3"
             },
             jupiter: {
-                audioFile: "audio/jupiter.mp3"
+                audioFile: "songs/jupiter.mp3"
             },
             saturn: {
-                audioFile: "audio/saturn.mp3"
+                audioFile: "songs/saturn.mp3"
             }
         };
 
