--- a/happy.html
+++ b/happy.html
@@ -1087,22 +1087,22 @@ body {
             <div class="mudra-section">
                 <h3 class="tips-section-title">Hand Mudras for Happiness</h3>
                 <div class="mudra-container">
-                    <a href="https://cdn.jwplayer.com/previews/j4qWCD6a" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/-1QPGcFLSS0?si=5fvkFT_Cl0-K9jmb" target="_blank" class="mudra-card">
                         <div class="mudra-icon">🙏</div>
                         <div class="mudra-name">Anjali Mudra</div>
                         <div class="mudra-benefit">Brings balance and harmony</div>
                     </a>
-                    <a href="https://www.tummee.com/yoga-poses/prana-mudra" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/3ritYT9VnTM?si=-bYfQ0AWr3Yrms7Y" target="_blank" class="mudra-card">
                         <div class="mudra-icon">🤲</div>
                         <div class="mudra-name">Prana Mudra</div>
                         <div class="mudra-benefit">Enhances vitality and joy</div>
                     </a>
-                    <a href="https://youtube.com/shorts/_I3LCrmhOis?si=bgs8Dboyye9tpvwf" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/_I3LCrmhOis?si=j3m1sktmWEGfllrW" target="_blank" class="mudra-card">
                         <div class="mudra-icon">👌</div>
                         <div class="mudra-name">Gyan Mudra</div>
                         <div class="mudra-benefit">Promotes peace and wisdom</div>
                     </a>
-                    <a href="https://youtube.com/shorts/6ROAQZh--NQ?si=oweTZD8WJd01xYVu" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/t5xSRQY4YCg?si=HWpuif1YLEal0mjC" target="_blank" class="mudra-card">
                         <div class="mudra-icon">🤟</div>
                         <div class="mudra-name">Hakini Mudra</div>
                         <div class="mudra-benefit">Boosts concentration and calmness</div>
