--- a/sad.html
+++ b/sad.html
@@ -1086,22 +1086,22 @@ body {
             <div class="mudra-section">
                 <h3 class="tips-section-title">Hand Mudras for Sadness Relief</h3>
                 <div class="mudra-container">
-                    <a href="https://www.tummee.com/yoga-poses/vayu-mudra" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/5Y5rF6zSWpI?si=WLhVApFLfvEC07Q_" target="_blank" class="mudra-card">
                         <div class="mudra-icon">🤞</div>
                         <div class="mudra-name">Vayu Mudra</div>
                         <div class="mudra-benefit">Calms anxiety and restlessness</div>
                     </a>
-                    <a href="https://youtube.com/shorts/Mq-wKNM_9I4?si=Dg09Kv_mlCo5rCWo" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/Mq-wKNM_9I4?si=1-cVWbiody3KsQwb" target="_blank" class="mudra-card">
                         <div class="mudra-icon">✋</div>
-                        <div class="mudra-name">Apana Vayu Mudra</div>
+                        <div class="mudra-name">Apana Vagu Mudra</div>
                         <div class="mudra-benefit">Eases emotional heaviness</div>
                     </a>
-                    <a href="https://youtube.com/shorts/DkWpY22BLAQ?si=Lvm6rah9nLTATvmP" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/By2FcdFCWNs?si=D0QpCrZ5enRIHu_r" target="_blank" class="mudra-card">
                         <div class="mudra-icon">🫶</div>
                         <div class="mudra-name">Hridaya Mudra</div>
                         <div class="mudra-benefit">Opens the heart to healing</div>
                     </a>
-                    <a href="https://youtube.com/shorts/qwXfDsxqdmY?si=39CkdfXws-fFe-uU" target="_blank" class="mudra-card">
+                    <a href="https://youtube.com/shorts/qwXfDsxqdmY?si=KJ7aPszwCo0iblxi" target="_blank" class="mudra-card">
                         <div class="mudra-icon">👐</div>
                         <div class="mudra-name">Chinmaya Mudra</div>
                         <div class="mudra-benefit">Restores inner strength and clarity</div>
